<5> [179.009216] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=10, flags=0x0 in xe_exec_reset [3109]
<5> [179.010592] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=4, flags=0x0 in xe_exec_reset [3109]
<5> [179.012018] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=13, flags=0x0 in xe_exec_reset [3109]
<5> [179.012053] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=22, flags=0x0 in xe_exec_reset [3109]
<5> [179.012114] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=14, flags=0x0 in xe_exec_reset [3109]
<5> [179.012171] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=1, flags=0x0 in xe_exec_reset [3109]
<5> [179.014881] xe 0000:03:00.0: [drm] GT0: Timedout job: seqno=4294967169, lrc_seqno=4294967169, guc_id=2, flags=0x0 in xe_exec_reset [3109]
<6> [179.017445] xe 0000:03:00.0: [drm] GT0: trying reset from force_reset [xe]
<6> [179.017559] xe 0000:03:00.0: [drm] GT0: reset queued
<6> [179.017801] xe 0000:03:00.0: [drm] GT0: reset started
<4> [179.018113] xe 0000:03:00.0: [drm] xe_gt_tlb_invalidation_ggtt error=-125
<4> [179.018113] xe 0000:03:00.0: [drm] xe_gt_tlb_invalidation_ggtt error=-125
<7> [179.018305] xe 0000:03:00.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: Applying GT save-restore MMIOs
<7> [179.018396] xe 0000:03:00.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0x4148] = 0x00000000
<7> [179.018475] xe 0000:03:00.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0x8828] = 0x00800000
<7> [179.018548] xe 0000:03:00.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0xb104] = 0x08104440
<7> [179.018613] xe 0000:03:00.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0xb108] = 0x30200000
<7> [179.018676] xe 0000:03:00.0: [drm:xe_reg_sr_apply_mmio [xe]] GT0: REG[0xb158] = 0x0000007f
<7> [179.018733] xe 0000:03:00.0: [drm:xe_wopcm_init [xe]] WOPCM: 4096K
<7> [179.018803] xe 0000:03:00.0: [drm:xe_wopcm_init [xe]] GuC WOPCM is already locked [6144K, 832K)
<6> [179.018917] [IGT] xe_exec_reset: finished subtest gt-reset-stress, SUCCESS
<7> [179.019901] xe 0000:03:00.0: [drm:xe_guc_ads_populate [xe]] GT0: ADS capture alloc size changed from 45056 to 20480
<7> [179.021711] xe 0000:03:00.0: [drm:__xe_guc_upload [xe]] GT0: load still in progress, timeouts = 0, freq = 400MHz (req 1800MHz), status = 0x00000064 [0x32/00]
<7> [179.022099] xe 0000:03:00.0: [drm:__xe_guc_upload [xe]] GT0: load still in progress, timeouts = 0, freq = 400MHz (req 1800MHz), status = 0x00000072 [0x39/00]
<7> [179.038189] xe 0000:03:00.0: [drm:drm_client_dev_restore [drm]] intel-fbdev: ret=0